force-app/main/default/objects/ApprovalProcessDefinition__c/ApprovalProcessDefinition__c.object-meta.xml
<CustomObject>
    <label>ApprovalProcessDefinition</label>
    <nameField>
        <label>ApprovalProcessDefinition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApprovalProcessDefinitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>