force-app/main/default/objects/ApprovalProcessDefinition__c/fields/ActionFlow_FinalApproval__c.field-meta.xml
<CustomField>
    <fullName>ActionFlow_FinalApproval__c</fullName>
    <description>Run this flow upon final approval</description>
    <label>ActionFlow_FinalApproval</label>
    <length>50</length>
    <type>Text</type>
</CustomField>