force-app/main/default/objects/ApprovalProcessDefinition__c/fields/ActionFlow_FinalRejection__c.field-meta.xml
<CustomField>
    <fullName>ActionFlow_FinalRejection__c</fullName>
    <label>ActionFlow_FinalRejection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>