force-app/main/default/objects/ApprovalProcessDefinition__c/fields/ActionFlow_InitialSubmission__c.field-meta.xml
<CustomField>
    <fullName>ActionFlow_InitialSubmission__c</fullName>
    <label>ActionFlow_InitialSubmission</label>
    <length>50</length>
    <type>Text</type>
</CustomField>