force-app/main/default/objects/ApprovalProcessDefinition__c/fields/ActionFlow_Recall__c.field-meta.xml
<CustomField>
    <fullName>ActionFlow_Recall__c</fullName>
    <label>ActionFlow_Recall</label>
    <length>50</length>
    <type>Text</type>
</CustomField>