force-app/main/default/objects/ApprovalProcessDefinition__c/fields/AllowRecall__c.field-meta.xml
<CustomField>
    <fullName>AllowRecall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowRecall</label>
    <type>Checkbox</type>
</CustomField>