force-app/main/default/objects/ApprovalProcessDefinition__c/fields/Automated_Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Automated_Approver_Role__c</fullName>
    <label>Automated Approver Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>