force-app/main/default/objects/ApprovalProcessDefinition__c/fields/ClassicEmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>ClassicEmailTemplateName__c</fullName>
    <label>ClassicEmailTemplateName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>