force-app/main/default/objects/ApprovalProcessDefinition__c/fields/ContextObjectTypeName__c.field-meta.xml
<CustomField>
    <fullName>ContextObjectTypeName__c</fullName>
    <description>The name of the object type that this approval process is designed for. Examples: Quote, MyObj__c</description>
    <label>ContextObjectTypeName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>