force-app/main/default/objects/ApprovalProcessDefinition__c/fields/EnableMobileDeviceAccess__c.field-meta.xml
<CustomField>
    <fullName>EnableMobileDeviceAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableMobileDeviceAccess</label>
    <type>Checkbox</type>
</CustomField>