force-app/main/default/objects/ApprovalProcessDefinition__c/fields/EntryCriteriaDisplayType__c.field-meta.xml
<CustomField>
    <fullName>EntryCriteriaDisplayType__c</fullName>
    <label>EntryCriteriaDisplayType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FormulaBuilder</fullName>
            </value>
            <value>
                <fullName>ExpressionBuilder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>