force-app/main/default/objects/ApprovalProcessDefinition__c/fields/EntryCriteriaMode__c.field-meta.xml
<CustomField>
    <fullName>EntryCriteriaMode__c</fullName>
    <label>EntryCriteriaMode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always Enter</fullName>
            </value>
            <value>
                <fullName>Enter If True, Else Bypass</fullName>
            </value>
            <value>
                <fullName>Enter If True, Else Reject</fullName>
            </value>
            <value>
                <fullName>Enter If True, Else Approve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>