force-app/main/default/objects/ApprovalProcessDefinition__c/fields/FinalApprovalRecordLock__c.field-meta.xml
<CustomField>
    <fullName>FinalApprovalRecordLock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FinalApprovalRecordLock</label>
    <type>Checkbox</type>
</CustomField>