force-app/main/default/objects/ApprovalProcessDefinition__c/fields/FinalRejectionRecordLock__c.field-meta.xml
<CustomField>
    <fullName>FinalRejectionRecordLock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FinalRejectionRecordLock</label>
    <type>Checkbox</type>
</CustomField>