force-app/main/default/objects/ApprovalProcessDefinition__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>25</length>
    <type>Text</type>
</CustomField>