force-app/main/default/objects/ApprovalProcessDefinition__c/fields/PostTemplate__c.field-meta.xml
<CustomField>
    <fullName>PostTemplate__c</fullName>
    <description>Post template to use for Approvals in Chatter.
Chatter post approval notifications are only available for approval processes associated with an object that has been enabled for feed tracking.</description>
    <label>PostTemplate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>