force-app/main/default/objects/ApprovalProcessDefinition__c/fields/Record_Detail_Fields__c.field-meta.xml
<CustomField>
    <fullName>Record_Detail_Fields__c</fullName>
    <label>Record Detail Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>