force-app/main/default/objects/ApprovalProcessDefinition__c/fields/RecordEditability__c.field-meta.xml
<CustomField>
    <fullName>RecordEditability__c</fullName>
    <label>RecordEditability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AdminOnly</fullName>
            </value>
            <value>
                <fullName>AdminOrCurrentApprover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>