force-app/main/default/objects/ApprovalProcessDefinition__c/fields/ShowApprovalHistory__c.field-meta.xml
<CustomField>
    <fullName>ShowApprovalHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowApprovalHistory</label>
    <type>Checkbox</type>
</CustomField>