force-app/main/default/objects/ApprovalProcessDefinition__c/fields/useApproverFieldOfRecordOwner__c.field-meta.xml
<CustomField>
    <fullName>useApproverFieldOfRecordOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Approver Field On Record Owner</label>
    <type>Checkbox</type>
</CustomField>