force-app/main/default/objects/ApprovalProcessDefinition__c/listViews/testqueue1_ApprovalProcessDefinition.listView-meta.xml
<ListView>
    <fullName>testqueue1_ApprovalProcessDefinition</fullName>
    <filterScope>Queue</filterScope>
    <label>testqueue1</label>
    <queue>testqueue1</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>